--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,4 @@
 = Tag for PA (Performance Appraisal)
 
-
+Tag for PA is a redmine plugin that helps appraisers and appraisees in Performance Appraisals. The plugin make possible to create tags that link issues and
+wiki pages to pre-established criteria and organizational objectives.
