--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= Tag for PA (Performance Appraisal)
+= Redmine TPA (Tag for Performance Appraisal) Plugin
 
 Tag for PA is a redmine plugin that helps appraisers and appraisees in Performance Appraisals. The plugin makes possible to create tags that link issues and
 wiki pages to pre-established criteria or organizational objectives.
@@ -11,19 +11,19 @@ wiki pages to pre-established criteria or organizational objectives.
 
 === Step-by-step
 
-* Copy or clone the plugin on Redmine plugin folder with the name tag_for_pa
+* Copy or clone the plugin on Redmine plugin folder with the name redmine_tpa
     
     cd /{redmineInstalationDir}/vendor/plugins
-    git clone https://github.com/hylozero/tag-for-pa.git tag_for_pa
+    git clone https://github.com/hylozero/redmine_tpa.git redmine_tpa
     
 * Run 
-   rake db:migrate_plugins NAME=tag_for_pa
+   rake db:migrate_plugins NAME=redmine_tpa
 	
 * Restart your redmine application.
 
 == License
  
-Tag for PA Plugin is open source and released under the terms of the {GNU General Public License - GPL - v3}[https://github.com/hylozero/tag-for-pa/blob/master/license.txt].
+Tag for PA Plugin is open source and released under the terms of the {GNU General Public License - GPL - v3}[https://github.com/hylozero/redmine_tpa/blob/master/license.txt].
 Check {GNU GPL v3 quick guide}[http://www.gnu.org/licenses/quick-guide-gplv3.html] for more information.
 
 == Credits
