--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -2,14 +2,15 @@
 
 pt-BR:
   # Titles
-  tag_for_pa: "TPA"
-  project_module_tag_for_pa: "Marcações para Avaliações"
+  redmine_tpa: "TPA"
+  project_module_redmine_tpa: "Marcações para Avaliações"
   appraisal_template_general_info: "Informações Gerais"
   appraisal_general_info: "Informações Gerais"
   appraisal_questions_info: "Critérios da Avaliação"
   appraisal_validity: "Vigência"
   appraisal_start_date: "Inicio"
   appraisal_end_date: "Término"
+  welcome_to_redmine_tpa: "Bem-vindo ao Redmine TPA (Tag for Performance Appraisal)"
 
   # Permissions
   permission_read_appraisals: "Ver Avaliações"
@@ -45,6 +46,7 @@ pt-BR:
   remove_appraisal_question: "Remover critério"
   remove_appraisal_question_option: "Remover opção"
   create_appraisal_template: "Criar modelo de avaliação"
+  welcome: "Boas-vindas"
 
   # labels
   no_data: "Sem registro"
