--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= Redmine TPA (Tag for Performance Appraisal) Plugin
+= Redmine TPA (Tag for Performance Appraisal)
 
 Tag for PA is a redmine plugin that helps appraisers and appraisees in Performance Appraisals. The plugin makes possible to create tags that link issues and
 wiki pages to pre-established criteria or organizational objectives.
