--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 = Redmine TPA (Tag for Performance Appraisal)
 
-Tag for PA is a redmine plugin that helps appraisers and appraisees in Performance Appraisals. The plugin makes possible to create tags that link issues and
+Redmine Tag for PA is a redmine plugin that helps appraisers and appraisees in Performance Appraisals. The plugin makes possible to create tags that link issues and
 wiki pages to pre-established criteria or organizational objectives.
 
 == How to install 
@@ -23,7 +23,7 @@ wiki pages to pre-established criteria or organizational objectives.
 
 == License
  
-Tag for PA Plugin is open source and released under the terms of the {GNU General Public License - GPL - v3}[https://github.com/hylozero/redmine_tpa/blob/master/license.txt].
+Redmine Tag for PA Plugin is open source and released under the terms of the {GNU General Public License - GPL - v3}[https://github.com/hylozero/redmine_tpa/blob/master/license.txt].
 Check {GNU GPL v3 quick guide}[http://www.gnu.org/licenses/quick-guide-gplv3.html] for more information.
 
 == Credits
