--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -10,7 +10,8 @@ pt-BR:
   appraisal_validity: "Vigência"
   appraisal_start_date: "Inicio"
   appraisal_end_date: "Término"
-  welcome_to_redmine_tpa: "Bem-vindo ao Redmine TPA (Tag for Performance Appraisal)!"
+  welcome_to_redmine_tpa: "Bem-vindo ao Redmine TPA!"
+  tpa: "Tag for Performance Appraisal"
 
   # Permissions
   permission_read_appraisals: "Ver Avaliações"
@@ -34,6 +35,7 @@ pt-BR:
   duplicate_appraisal_question_options: "A pergunta \"%{question}\" parece estar com a opção \"%{option}\" duplicada."
   appraisal_end_dat_must_be_after_start_date: "Data final menor que data inicial"
   insert_at_least_one_appraisal_appraisee: "Entre com pelo menos um avaliado"
+  insert_at_least_one_appraisal_appraiser: "Entre com pelo menos um avaliador"
   appraisal_already_in_progress: "esta avaliação já está em andamento"
 
   # Notice Messages
@@ -42,6 +44,7 @@ pt-BR:
   appraisal_successfully_destroyed: "Avaliação destruída com sucesso"
 
   # Links
+  tag_for_pa: "Marcar para Avaliação"
   appraisals: "Avaliações"
   creating_appraisals: "Criando Avaliações"  
   appraisals_templates: "Modelos de Avaliações"  
