--- a/README.rdoc
+++ b/README.rdoc
@@ -27,5 +27,9 @@ Check {GNU GPL v3 quick guide}[http://www.gnu.org/licenses/quick-guide-gplv3.htm
 
 == Credits
 * paper_trail[https://github.com/airblade/paper_trail]
-* Andrew France Workaround for validates_uniqueness_of nested attributes[https://rails.lighthouseapp.com/projects/8994/tickets/2160-nested_attributes-validates_uniqueness_of-fails#ticket-2160-11]
-* Ryan Bates nested forms episodes[http://railscasts.com/episodes/196-nested-model-form-revised]
+* active_link_to[active_link_to]
+* will_paginate[https://github.com/mislav/will_paginate]
+* select2[https://github.com/select2/select2]
+* twitter bootstrap[http://getbootstrap.com]
+* Nice Andrew France Workaround [https://rails.lighthouseapp.com/projects/8994/tickets/2160-nested_attributes-validates_uniqueness_of-fails#ticket-2160-11]
+* Ryan Bates nested forms [http://railscasts.com/episodes/196-nested-model-form-revised]
