--- a/README.rdoc
+++ b/README.rdoc
@@ -22,6 +22,16 @@ Redmine TPA (Tag for Performance Appraisal) is a redmine plugin that helps appra
 	
 * Restart your redmine application.
 
+* Good to go.
+
+== Contributions
+
+If you want to contribute, please:
+
+	* Fork the project.
+	* Make your translation, feature addition or bug fix.
+	* Send me a pull request on Github.
+
 == License
  
 Redmine Tag for PA Plugin is open source and released under the terms of the {GNU General Public License - GPL - v3}[https://github.com/hylozero/redmine_tpa/blob/master/license.txt].
